A bunch of updates
- Use our own implementation for the beacon screen
- some funny rendering stuff
- More refactoring of shit
- Config options
- idk a bunch of stuff

Signed-off-by: solonovamax <solonovamax@12oclockpoint.com>